--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     .icon svg { width: 32px; height: 32px; opacity: 0.95; }
     .icon svg[data-belt] { width: 56px; height: 36px; }
 
-    .card h3 { margin: 0 0 6px; font-size: 16px; letter-spacing: 0.2px; }
+    .card h3 { margin: 0 0 6px; font-size: 16px; }
     .muted { color: var(--muted); font-size: 13px; }
     .count {
       font-weight: 800; font-size: 20px; letter-spacing: 0.3px; padding: 6px 10px; border-radius: 10px; min-width: 44px; text-align: center;
@@ -297,60 +297,74 @@
 
   <script>
     // ------- Storage & Data -------
-  
-// ------- Storage & Data -------
-const KEY = "bjj-submissions-v1";
+    const KEY = "bjj-submissions-v1";
 
-/* (NEW) Shared cache keys used to migrate local data from Safari → PWA */
-const MIGRATION_CACHE = "bjj-migrate-v1";
-const MIGRATION_URL   = "/__bjj_migrate__";
-/* (NEW) Cookie-based fallback (chunked) for one-time migration */
-const MIG_COOKIE_PREFIX = "bjj_mig_";
-const MIG_COOKIE_MAX = 8; // up to 8 chunks (~32KB total, safe margin)
+    /* Shared cache keys used to migrate local data from Safari → PWA */
+    const MIGRATION_CACHE = "bjj-migrate-v1";
+    const MIGRATION_URL   = "/__bjj_migrate__";
 
-function setCookie(name, value, days=180) {
-  try {
-    const exp = new Date(Date.now() + days*864e5).toUTCString();
-    document.cookie = `${name}=${value}; expires=${exp}; path=/; SameSite=Lax`;
-  } catch {}
-}
-function getCookie(name) {
-  const safe = name.replace(/([.*+?^${}()|[\]\\])/g, '\\$1');
-  const m = document.cookie.match(new RegExp('(?:^|; )' + safe + '=([^;]*)'));
-  return m ? m[1] : null;
-}
-function delCookie(name) { setCookie(name, "", -1); }
+    /* Cookie-based fallback (chunked) for one-time migration */
+    const MIG_COOKIE_PREFIX = "bjj_mig_";
+    const MIG_COOKIE_MAX = 8; // up to ~32KB total
 
-function writeMigrationCookie(obj) {
-  try {
-    const raw = JSON.stringify(obj);
-    const enc = encodeURIComponent(raw);
-    const CHUNK = 3800; // stay below 4KB per cookie incl. name/attrs
-    const parts = Math.ceil(enc.length / CHUNK);
-    for (let i=0;i<MIG_COOKIE_MAX;i++) delCookie(MIG_COOKIE_PREFIX+i);
-    if (parts > MIG_COOKIE_MAX) return; // too big, skip cookie fallback
-    for (let i=0;i<parts;i++) {
-      const slice = enc.slice(i*CHUNK, (i+1)*CHUNK);
-      setCookie(MIG_COOKIE_PREFIX + i, slice);
+    function setCookie(name, value, days=180) {
+      try {
+        const exp = new Date(Date.now() + days*864e5).toUTCString();
+        document.cookie = `${name}=${value}; expires=${exp}; path=/; SameSite=Lax`;
+      } catch {}
     }
-  } catch {}
-}
-function readMigrationCookie() {
-  try {
-    let buf = "";
-    for (let i=0;i<MIG_COOKIE_MAX;i++) {
-      const part = getCookie(MIG_COOKIE_PREFIX + i);
-      if (!part) break;
-      buf += part;
+    function getCookie(name) {
+      const safe = name.replace(/([.*+?^${}()|[\]\\])/g, '\\$1');
+      const m = document.cookie.match(new RegExp('(?:^|; )' + safe + '=([^;]*)'));
+      return m ? m[1] : null;
     }
-    if (!buf) return null;
-    const dec = decodeURIComponent(buf);
-    return JSON.parse(dec);
-  } catch { return null; }
-}
-function clearMigrationCookie() {
-  for (let i=0;i<MIG_COOKIE_MAX;i++) delCookie(MIG_COOKIE_PREFIX + i);
-}
+    function delCookie(name) { setCookie(name, "", -1); }
+
+    function writeMigrationCookie(obj) {
+      try {
+        const raw = JSON.stringify(obj);
+        const enc = encodeURIComponent(raw);
+        const CHUNK = 3800; // below 4KB per cookie incl. name/attrs
+        const parts = Math.ceil(enc.length / CHUNK);
+        for (let i=0;i<MIG_COOKIE_MAX;i++) delCookie(MIG_COOKIE_PREFIX+i);
+        if (parts > MIG_COOKIE_MAX) return; // too big, skip
+        for (let i=0;i<parts;i++) {
+          const slice = enc.slice(i*CHUNK, (i+1)*CHUNK);
+          setCookie(MIG_COOKIE_PREFIX + i, slice);
+        }
+      } catch {}
+    }
+    function readMigrationCookie() {
+      try {
+        let buf = "";
+        for (let i=0;i<MIG_COOKIE_MAX;i++) {
+          const part = getCookie(MIG_COOKIE_PREFIX + i);
+          if (!part) break;
+          buf += part;
+        }
+        if (!buf) return null;
+        const dec = decodeURIComponent(buf);
+        return JSON.parse(dec);
+      } catch { return null; }
+    }
+    function clearMigrationCookie() {
+      for (let i=0;i<MIG_COOKIE_MAX;i++) delCookie(MIG_COOKIE_PREFIX + i);
+    }
+
+    // --- Base64 helpers for URL payload (ASCII-safe) ---
+    function b64enc(str){ return btoa(unescape(encodeURIComponent(str))); }
+    function b64dec(str){ return decodeURIComponent(escape(atob(str))); }
+    function getHashParam(name){
+      const h = location.hash.startsWith('#') ? location.hash.slice(1) : location.hash;
+      const m = h.match(new RegExp('(?:^|&)' + name + '=([^&]*)'));
+      return m ? decodeURIComponent(m[1]) : null;
+    }
+    function setHashParam(name, value){
+      const params = new URLSearchParams(location.hash.slice(1));
+      params.set(name, encodeURIComponent(value));
+      history.replaceState(null, '', '#' + params.toString());
+    }
+
     // Exact initial order you requested
     const SUBMISSIONS = [
       "armbar_from_mount",
@@ -435,28 +449,29 @@ function clearMigrationCookie() {
       } catch { return defaultData(); }
     }
 
-function writeData(data) {
-  // Persist to localStorage (current context)
-  localStorage.setItem(KEY, JSON.stringify(data));
-  // Also mirror to Cache Storage so the installed app can import it
-  saveMigrationMirror(data);
-}
-
-function saveMigrationMirror(data){
-  try {
-    // Cache Storage mirror (best path when iOS shares it)
-    if ("caches" in window) {
-      caches.open(MIGRATION_CACHE).then(cache => {
-        const res = new Response(JSON.stringify(data), {
-          headers: { "Content-Type": "application/json", "Cache-Control": "no-store" }
-        });
-        cache.put(MIGRATION_URL, res).catch(()=>{});
-      }).catch(()=>{});
+    function writeData(data) {
+      // Persist to localStorage (current context)
+      localStorage.setItem(KEY, JSON.stringify(data));
+      // Also mirror to Cache Storage and cookie so the installed app can import it
+      saveMigrationMirror(data);
     }
-  } catch {}
-  // (NEW) Cookie fallback mirror (chunked)
-  writeMigrationCookie(data);
-}
+
+    function saveMigrationMirror(data){
+      try {
+        // Cache Storage mirror (best path when iOS shares it)
+        if ("caches" in window) {
+          caches.open(MIGRATION_CACHE).then(cache => {
+            const res = new Response(JSON.stringify(data), {
+              headers: { "Content-Type": "application/json", "Cache-Control": "no-store" }
+            });
+            cache.put(MIGRATION_URL, res).catch(()=>{});
+          }).catch(()=>{});
+        }
+      } catch {}
+      // Cookie fallback mirror (chunked)
+      writeMigrationCookie(data);
+    }
+
     const $  = sel => document.querySelector(sel);
     const $$ = sel => Array.from(document.querySelectorAll(sel));
     function vibrate(ms=12){ if (navigator.vibrate) try { navigator.vibrate(ms); } catch {} }
@@ -465,51 +480,59 @@ function saveMigrationMirror(data){
     let DATA = readData();
     let pendingSubmission = null;
 
-    /* (NEW) If localStorage is empty (typical on first launch of the PWA on iOS),
-   try to pull a previously mirrored copy from Cache Storage and adopt it. */
-(async function migrateFromCacheIfNeeded(){
-  try {
-    const hasLocal = !!localStorage.getItem(KEY);
-    if (hasLocal) return; // Nothing to migrate
+    /* One-time import for installed app if localStorage is empty.
+       Order: URL hash payload (#m=...), then Cache Storage, then cookie. */
+    (async function migrateIfNeeded(){
+      try {
+        const hasLocal = !!localStorage.getItem(KEY);
+        if (hasLocal) return; // already initialized
 
-    
-  let obj = null;
+        let obj = null;
 
-// Try Cache Storage first
-try {
-  if ("caches" in window) {
-    const cache = await caches.open(MIGRATION_CACHE);
-    const res   = await cache.match(MIGRATION_URL);
-    if (res) obj = await res.json();
-  }
-} catch {}
+        // 1) URL hash payload (most reliable on iOS A2HS)
+        const m = getHashParam('m');
+        if (m) {
+          try { obj = JSON.parse(b64dec(m)); } catch {}
+        }
 
-// Fallback to cookie if cache failed/missing
-if (!obj) {
-  obj = readMigrationCookie();
-  // Optional: if still null, we’ll just exit below
-}
-if (!obj) return;
-    if (obj && obj.submissions) {
-     DATA = obj;
-writeData(DATA);     // re-save (and re-mirror) in the new context
+        // 2) Cache Storage
+        if (!obj) {
+          try {
+            if ("caches" in window) {
+              const cache = await caches.open(MIGRATION_CACHE);
+              const res   = await cache.match(MIGRATION_URL);
+              if (res) obj = await res.json();
+            }
+          } catch {}
+        }
 
-// Clean up migration artifacts so it can't re-import
-try { if ("caches" in window) { const c = await caches.open(MIGRATION_CACHE); await c.delete(MIGRATION_URL); } } catch {}
-clearMigrationCookie();
+        // 3) Cookie fallback
+        if (!obj) {
+          obj = readMigrationCookie();
+        }
 
-// NEW: show what we actually imported
-const importedTotal = totalAllFrom(obj);
+        if (!obj || !obj.submissions) return;
 
-refreshCards();
-if (!document.getElementById("view-stats").hasAttribute("hidden")) buildStats();
-toast(`Imported your previous data (total: ${importedTotal})`);
-vibrate(12); 
-    }
-  } catch {
-    /* no-op */
-  }
-})();
+        // Adopt and persist
+        DATA = obj;
+        writeData(DATA);
+
+        // Cleanup: cache, cookie, and hash
+        try { if ("caches" in window) { const c = await caches.open(MIGRATION_CACHE); await c.delete(MIGRATION_URL); } } catch {}
+        clearMigrationCookie();
+        if (location.hash.includes('m=')) {
+          history.replaceState(null, '', location.pathname + location.search);
+        }
+
+        // Refresh UI and confirm
+        const importedTotal = totalAllFrom(obj);
+        refreshCards();
+        if (!document.getElementById("view-stats").hasAttribute("hidden")) buildStats();
+        toast(`Imported your previous data (total: ${importedTotal})`);
+        vibrate(12);
+      } catch {}
+    })();
+
     function totalFor(sub) {
       const o = DATA.submissions[sub];
       return BELTS.reduce((n,b) => n + (o[b]||0), 0);
@@ -523,17 +546,17 @@ vibrate(12);
       return sum;
     }
     function totalAllFrom(obj){
-  try{
-    if (!obj || !obj.submissions) return 0;
-    const belts = ["white","blue","purple","brown","black"];
-    let n = 0;
-    for (const k of Object.keys(obj.submissions)) {
-      const v = obj.submissions[k] || {};
-      for (const b of belts) n += (v[b] | 0);
+      try{
+        if (!obj || !obj.submissions) return 0;
+        const belts = ["white","blue","purple","brown","black"];
+        let n = 0;
+        for (const k of Object.keys(obj.submissions)) {
+          const v = obj.submissions[k] || {};
+          for (const b of belts) n += (v[b] | 0);
+        }
+        return n;
+      } catch { return 0; }
     }
-    return n;
-  } catch { return 0; }
-}
     // Belt rank for total: +1 rank every 100 moves, capped at black
     function totalRank() {
       return Math.min(4, Math.floor(totalAll() / 100));
@@ -702,6 +725,7 @@ vibrate(12);
         if (!pendingSubmission) return;
         DATA.submissions[pendingSubmission][belt]+=1;
         applyProgression(pendingSubmission,belt);
+        // Force-update the migration mirrors right after each log
         saveMigrationMirror(DATA);
         refreshCards();
         if (!$("#view-stats").hasAttribute("hidden")) buildStats();
@@ -785,15 +809,8 @@ vibrate(12);
     // Initial render
     SUBMISSIONS.forEach((key)=>{ if(!document.getElementById("count-"+key)){ ensureZeroed(key); renderCard(key);} });
     refreshCards();
-    // (NEW) Warn if not on canonical host to avoid cross-origin installs
-if (location.hostname !== "www.bjjcounter.com") {
-  toast("Tip: install from www.bjjcounter.com to carry data into the app");
-}
-    document.getElementById("addBtn").addEventListener("click", addSubmissionFlow);
-    document.getElementById("sortBtn").addEventListener("click", sortNow);
-// (NEW) Make sure a migration mirror exists on first load in Safari
-saveMigrationMirror(DATA);
-    // Install / A2HS banner (no cookie/cache logic)
+
+    // Install / A2HS banner
     (function () {
       const banner = document.getElementById("installBanner");
       const txt = document.getElementById("installText");
@@ -820,6 +837,12 @@ saveMigrationMirror(DATA);
 
       if (isiOS) {
         if (localStorage.getItem(DISMISS_KEY) !== "1") {
+          // Attach current data as a URL hash so the installed app can import it
+          try {
+            const payload = b64enc(JSON.stringify(DATA));
+            setHashParam('m', payload);
+          } catch {}
+
           txt.innerHTML = `<strong>Add to Home Screen</strong><br/>Tap the <span style="border:1px solid rgba(148,163,184,0.35); padding:0 6px; border-radius:6px;">Share</span> button → <em>Add to Home Screen</em>.`;
           banner.hidden = false;
           btnInstall.style.display = "none";
