--- a/index.html
+++ b/index.html
@@ -878,15 +878,13 @@ writeData(DATA); renderCard(key); refreshCards(); if(!document.getElementById("v
     // Initial render
     SUBMISSIONS.forEach((key)=>{ if(!document.getElementById("count-"+key)){ ensureZeroed(key); renderCard(key);} });
     refreshCards();
-    // --- Header actions (Add / Sort) ---
+// --- Header actions (Add / Sort) ---
 const addBtn  = document.getElementById("addBtn");
 const sortBtn = document.getElementById("sortBtn");
 
-// Use pointerup (works great on iOS) + click fallback
-function bindTap(el, fn){
-  if (!el) return;
-  el.addEventListener("pointerup", fn);
-  el.addEventListener("click", fn);
+// Bind only 'click' to avoid double fire (pointerup + click) on iOS
+addBtn?.addEventListener("click", addSubmissionFlow);
+sortBtn?.addEventListener("click", sortNow);
 }
 
 bindTap(addBtn,  addSubmissionFlow);
